# nlp-mlops-coursework

./: .gitignore  DATASET_CARD.md  Dockerfile  MODEL_CARD.md  README.md  data.dvc  docker-compose.yaml  dvc.yaml  params.yaml  pyproject.toml
.dvc/: config
.github/workflows/: ci.yaml
app/: main.py
app/api/: endpoints.py
app/models/: schemas.py
app/services/: predictor.py
configs/: train_config.yaml
notebooks/: 01_vk_api.ipynb  01_vk_parser.ipynb  02_data_preporation.ipynb  03_descriptive_statistics.ipynb  04_vectorizing.ipynb  04_vectorizing_modeling.ipynb  05_modelling.ipynb  course_project.ipynb
src/data/: preprocessor.py  vk_parser.py
src/models/: convert_to_onnx.py  train.py
src/ui/: app_ui.py
triton_repo/classifier/: config.pbtxt
