[project]
name = "nlp-mlops-coursework"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "vk-api (>=11.10.0,<12.0.0)",
    "bs4 (>=0.0.2,<0.0.3)",
    "emoji (>=2.15.0,<3.0.0)",
    "demoji (>=1.1.0,<2.0.0)",
    "googletrans (>=4.0.2,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
