[project]
name = "nlp-mlops-coursework"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "vk-api (>=11.10.0,<12.0.0)",
    "bs4 (>=0.0.2,<0.0.3)",
    "nltk (>=3.9.2,<4.0.0)",
    "pymorphy3 (>=2.0.6,<3.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "wordcloud (>=1.9.4,<2.0.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "sentence-transformers (>=5.1.2,<6.0.0)",
    "dvc (>=3.64.2,<4.0.0)",
    "dvc-s3 (>=3.2.2,<4.0.0)",
    "mlflow (>=3.7.0,<4.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "pyyaml (>=6.0.3,<7.0.0)",
    "skl2onnx (>=1.19.1,<2.0.0)",
    "tritonclient (==2.34.0)",
    "geventhttpclient (>=2.3.7,<3.0.0)",
    "streamlit (>=1.52.2,<2.0.0)",
    "emoji (>=2.15.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
